# exaDEM

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  SUPPORT.md
contribs/: CMakeLists.txt
contribs/defbox_math_py/: README.txt  deformation_math_xstampv2.py  generate_lengths_angles_dat_file.py
contribs/egl/: CMakeLists.txt  egl_draw_drivers.cpp  egl_driver_to_buffer.cu  egl_shape_to_buffer.cu  egl_shape_to_shader.cu
example/: CMakeLists.txt  README.md
example/axial-stress/: shear_with_xform_dem.msp  xform_shear.cfg  xform_test.cfg
example/commands/: CMakeLists.txt
example/depot/: depot.msp
example/impose_velocity/: impose_velocity.msp
example/mesh-stl/: mesh_stl.msp
example/movable-wall/: movable_wall.msp
example/polyhedra/: CMakeLists.txt  README.md
example/quadratic-force-test/: QuadraticForceInput.msp
example/radial-stress/: radial-stress.msp
example/rigid-surface/: rigid_surface.msp
example/rotating-drum/: CMakeLists.txt  rotating-drum.msp
example/spheres/: .CMakeLists.txt.swp  CMakeLists.txt  README.md
example/tutorial/: README.md
scripts/: CMakeLists.txt  README.md  clang_format_google.sh  compute_damp_rate.py  generate_md.py  mkdocs.yml  patch_library_path.sh  restart_template.py  script-clang-format.sh  setenv.sh
scripts/docs/: api.md  data_class.md  data_utils.md  geometry.md  index.md  io_utils.md  mass_properties.md  topology.md
scripts/lib/: data_class.py  data_utils.py  geometry.py  io_utils.py  mass_properties.py  topology.py
scripts/post_processing/: avg_stress.gnu  compute_box_deformation.py  compute_clusters_stresses_tensors.py  interaction_summary.py  plot_interfaces_stat.py  plot_stress_components.py  profile_pos_vel.py
scripts/pre_processing/: duplicate_cluster.py  tess2rockable.py  test_io_rockable.py
scripts/site/: 404.html  index.html  objects.inv
scripts/test/: test_compute_clusters_stresses_tensors.py  test_io_rockable.py  test_tess2rockable.py
scripts/tools/: README.md  restart_template.py
src/: CMakeLists.txt
src/analysis/: CMakeLists.txt  avg_stress_tensor.cpp  avg_stress_tensor.cu  barycenter.cpp  barycenter.cu  counter.cpp  counter.cu  quantities_cell_projection.cpp  stats_interactions.cpp  stats_interactions.cu
src/deposit/: CMakeLists.txt  add_xyz.cpp
src/driver/: CMakeLists.txt  add_ball.cpp  add_cylinder.cpp  add_stl_mesh.cpp  add_surface.cpp  backup_drivers.cpp  backup_drivers.cu  compute_driver_vertices.cpp  drive_ball_wall_radius.cpp  drive_compression_wall.cpp  drive_cylinder_wall.cpp  drive_pebble_radius.cpp  drive_shear_configuration.cpp  drive_wall.cpp  driver_displ_over.cpp  driver_displ_over.cu  driver_extractor.cpp  driver_extractor_require_force_moment.cpp  driver_extractor_summary.cpp  driver_vertices.cpp  driver_vertices.cu  dump_drivers.cpp  dump_drivers.cu  dump_stl_mesh.cpp  force_to_accel_driver.cpp  grid_stl_mesh.cpp  init_drivers.cpp  init_drivers.cu  modify_motion.cpp  paraview_driver.cpp  paraview_driver.cu  print_drivers.cpp  push_av_to_quat_driver.cpp  push_f_v_driver.cpp  push_f_v_r_driver.cpp  push_to_quat_stl_mesh.cpp  push_v_to_r_driver.cpp  register_ball.cpp  register_cylinder.cpp  register_driver_extractor.cpp  (+7 more)
src/experimental/: CMakeLists.txt  nbh_polyhedron_gpu.cu  nbh_polyhedron_gpu_pccp.cu  unclassify_gpu.cpp
src/field/: CMakeLists.txt  avg_v_m.cu  check_dt_critical.cpp  check_homothety.cpp  check_rcut.cpp  dem_rcut_max.cpp  density_from_shape.cpp  inertia_from_shape.cpp  min_field.cu  particle_type.cpp  radius_from_shape.cpp  radius_from_shape.cu  reset_stress.cpp  reset_stress.cu  set_densities_multiple_materials.cpp  set_density.cpp  set_div_stress_v.cpp  set_div_stress_v.cu  set_fields.cpp  set_fields.cu  set_group.cu  set_homothety.cpp  set_homothety.cu  set_material_properties.cpp  set_material_properties.cu  set_moment.cu  set_quaternion.cpp  set_quaternion.cu  set_radius.cpp  set_radius.cu  set_radius_multiple_materials.cpp  set_rand_avrot_arot.cpp  set_rand_velocity.cpp  set_rand_velocity.cu  set_type.cpp  set_type.cu  update_inertia.cpp  update_inertia.cu
src/fieldmutator/: CMakeLists.txt  set_densities_multiple_materials.cpp  set_density.cpp  set_homothety.cpp  set_material_properties.cpp  set_quaternion.cpp  set_radius.cpp  set_radius_multiple_materials.cpp  set_rand_avrot_arot.cpp  set_rand_velocity.cpp  update_inertia.cpp
src/forcefield/: CMakeLists.txt  Document 1 sans titre  check_group_completeness.cu  cylinder_wall.cpp  driver_cp.cpp  gravity_force.cpp  gravity_force.cu  hooke_force.cpp  hooke_force_driver.cpp  multimat_cp.cpp  multimat_inner_bond.cpp  quadratic_force.cpp  quadratic_force.cu  rigid_surface.cpp  sphere_fluid_friction.cpp  sphere_fluid_friction.cu
src/friction/: CMakeLists.txt  check_nbh_friction.cpp  compact_neighbor_friction.cpp  init_neighbor_friction.cpp  migrate_cell_particles_friction.cpp  move_particles_friction.cpp  reorder_neighbor_friction.cpp  reorder_neighbor_friction_gpu.cpp  update_nbh_friction.cpp
src/grid/: CMakeLists.txt  chunk.cpp  chunk2.cpp  chunk_neighbors_contact.cpp  chunk_neighbors_contact.cu  grid_flavor.cpp  grid_flavor_dem.cpp  traversals.cpp  update_cell_list.cpp  update_ghosts.cpp  update_ghosts.cu  update_mutexes.cpp
src/interaction/: CMakeLists.txt  apply_interface_fracture_criterion.cpp  apply_interface_fracture_criterion.cu  broken_interface_friction_updater.cpp  check_classifier_interaction_pair.cpp  check_consistency_grid_classifier.cpp  check_extra_data_storage_consistency.cpp  check_interaction_consistency.cpp  check_owner_and_partner_ghosts.cpp  classify_interaction_ghost.cpp  classify_interactions.cpp  classify_interactions.cu  compress_interaction.cpp  compute_driver_force_moment.cu  dem_cost_model.cpp  dump_contact_network.cpp  filter_particle.cpp  migrate_cell_particles_interaction.cpp  move_particles_interaction.cpp  read_shape_file.cpp  read_stl_mesh_to_shp.cpp  stats_interactions.cpp  store_broken_interface.cpp  stress_tensor.cpp  stress_tensor.cu  stress_tensor_global.cpp  (+6 more)
tests/: CMakeLists.txt  test_compute_hooke.cpp  test_gravity.cpp  test_init_fields.cpp
(+803 files in other folders)
